# MapReduce

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  mr.h
